@@ -10,7 +10,7 @@ namespace LifecycleRebalance.MessageBox
     public class ListMessageBox : MessageBoxBase
     {
         // Components.
-        private UIButton closeButton;
+        protected UIButton closeButton;
 
 
         /// <summary>
