@@ -10,6 +10,9 @@ namespace LifecycleRebalance
     [ConfigurationPath("LifecycleRebalance.xml")]
     public class SettingsFile
     {
+        public string WhatsNewVersion { get => ModSettings.whatsNewVersion; set => ModSettings.whatsNewVersion = value; }
+        public string WhatsNewBeta { get => ModSettings.whatsNewBeta; set => ModSettings.whatsNewBeta = value; }
+
         public int NotificationVersion { get; set; } = 0;
         public bool UseVanilla { get; set; } = false;
         public bool UseLegacy { get; set; } = false;
@@ -44,6 +47,10 @@ namespace LifecycleRebalance
     /// </summary>
     internal static class ModSettings
     {
+        // What's new notification version.
+        internal static string whatsNewVersion = "0.0";
+        internal static string whatsNewBeta = "";
+
         // 1 divided by the number of game age increments per decade for calculation purposes.
         public static double decadeFactor;
 
