@@ -119,10 +119,12 @@
     <Compile Include="Code\AI\ResidentAITransport.cs" />
     <Compile Include="Code\AI\StartConnectionTransferImpl.cs" />
     <Compile Include="Code\AI\UpdateHealthTranspiler.cs" />
+    <Compile Include="Code\Notifications\Don%27tShowAgainMessageBox.cs" />
     <Compile Include="Code\Notifications\ListMessageBox.cs" />
     <Compile Include="Code\Notifications\MessageBoxBase.cs" />
+    <Compile Include="Code\Notifications\WhatsNew.cs" />
+    <Compile Include="Code\Notifications\WhatsNewMessageBox.cs" />
     <Compile Include="Code\Patcher.cs" />
-    <Compile Include="Code\Notifications\ErrorNotification.cs" />
     <Compile Include="Code\Settings\OptionsPanelTabs\DeathOptions.cs" />
     <Compile Include="Code\Settings\OptionsPanelTabs\ImmigrationOptions.cs" />
     <Compile Include="Code\Settings\OptionsPanelTabs\ModOptions.cs" />
@@ -133,7 +135,6 @@
     <Compile Include="Code\Settings\OptionsPanelTabs\TransportOptions.cs" />
     <Compile Include="Code\Settings\PanelUtils.cs" />
     <Compile Include="Code\Settings\Settings.cs" />
-    <Compile Include="Code\Notifications\UpdateNotification.cs" />
     <Compile Include="Code\Utils\ModUtils.cs" />
     <Compile Include="Code\Utils\UIControls.cs" />
     <Compile Include="Code\XML\XML_Settings.cs" />
